// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPortal should auto remove container 1`] = `
<body>
  <div />
</body>
`;

exports[`createPortal should not auto remove container 1`] = `
<body>
  <div />
  <div
    id="react-cool-portal"
  />
</body>
`;

exports[`createPortal should not render portal 1`] = `
<body>
  <div />
</body>
`;

exports[`createPortal should render portal 1`] = `
<body>
  <div />
  <div
    id="react-cool-portal"
  >
    <div
      data-testid="target"
    >
      Test
    </div>
  </div>
</body>
`;
